<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.places.PlacesFragment">

    <com.google.android.material.card.MaterialCardView

        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/BottomCornersShape">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Arkaplan Dairesi -->

            <!-- Metin (Yaricap) TextView -->

            <ImageView
                android:id="@+id/imgLocationCircle"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:src="@drawable/ic_place"
                app:layout_constraintBottom_toBottomOf="@+id/kmText"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/kmText" />

            <ImageView
                android:id="@+id/imgUp"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_arrow_up"
                app:layout_constraintBottom_toTopOf="@+id/imgDown"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/circleBackground"
                app:layout_constraintTop_toTopOf="@+id/circleBackground" />

            <ImageView
                android:id="@+id/imgDown"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_arrow_down"
                app:layout_constraintBottom_toBottomOf="@+id/circleBackground"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toEndOf="@+id/circleBackground"
                app:layout_constraintTop_toBottomOf="@+id/imgUp" />

            <View
                android:id="@+id/view"
                android:layout_width="50dp"
                android:layout_height="1dp"
                android:background="@color/main"
                app:layout_constraintBottom_toBottomOf="@+id/circleBackground"
                app:layout_constraintEnd_toEndOf="@+id/circleBackground"
                app:layout_constraintTop_toTopOf="@+id/circleBackground" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/circleBackground"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/circle_background"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alegreya_bold"
                android:text="@string/distance"
                android:textColor="@color/main"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/divider"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tVType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:drawableEnd="@drawable/ic_arrow_down"
                android:fontFamily="@font/alegreya_bold"
                android:hint="@string/place_type"
                android:text="@string/restaurant"
                android:textColor="@color/main"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"

                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/kmText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/alegreya_bold"
                android:text="@string/km"
                android:textColor="@color/main"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/view"
                app:layout_constraintEnd_toEndOf="@+id/view"
                app:layout_constraintStart_toStartOf="@+id/view" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/alegreya_bold"
                android:text="@string/place_type"
                android:textColor="@color/main"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/divider"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rVPlaces"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSearch"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="64dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/alegreya_extra_bold"
        android:text="@string/search"
        android:textColor="@color/main"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView" />

    <TextView
        android:id="@+id/tvNoPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/alegreya_regular"
        android:text="@string/no_places_result"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgNoPlaces" />

    <ImageView
        android:id="@+id/imgNoPlaces"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_mood_bad"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>